# docflow

./: .pre-commit-config.yaml  .pydocstyle.ini  .pylintrc  README.md  ps.py  pyproject.toml  requirements.txt
docflow/: __init__.py  clients.py  errors.py  exceptions.py  schemas.py  settings.py  version.py
docflow/backend/: __Init__.py  download_module.py  google_ocr.py  predict_transformers.py  predict_utils.py  predict_yolo.py  settings.py
docflow/backend/api/: keyinfo_main.py  pdfclasss_main.py  pdfside_main.py  table_main.py
docflow/backend/predict_table/: __init__.py  cells.py  merge_v3.py  schemas.py  table_abc.py  tables.py
docflow/backend/predict_table/table_transformer/: __init__.py  table_process.py  table_transformer.py
docflow/backend/worker/: __init__.py  base.py  keyinfo_worker.py  main.py  pdfclasss_worker.py  pdfside_worker.py  sync_to_async.py  table_worker.py
docflow/models/: __init__.py  base.py  pdfocr_enums.py  pdfocr_models.py  pdfocr_schemas.py
docflow/pre_process/: merge.py  merge_v4.py
docflow/pre_process/ocrs/: schemas.py
docflow/s3/: __init__.py  base.py  cache_client.py  image_client.py  s3_client.py  upoload_client.py
docflow/security/: __init__.py  auth.py  permissions.py  security_manager.py
docflow/utils/: __init__.py  amqp_client.py  fileutils.py  logger.py  pydantic_sqlalchemy.py  retry.py  trans.py
docker/: docker-compose.db.yml  docker-compose.es.yml  docker-compose.gpu.yml  docker-compose.worker.yml  docker-compose.yml  start_db.sh  start_label.sh
docker/service_api/: Dockerfile  policy.xml
docker/service_backend/: Dockerfile
